# energy-calc

./: README.md  manage.py  pyproject.toml  requirements.txt
config/: default-smulders-1000.yaml  default-smulders-200.yaml  default.yaml
data/: Adams meetdata 2022 2023 204.xlsx  Historiek_afname_elektriciteit_541448860020554006_20250101_20260124_dagtotalen.csv
docs/: ea_sim_berekeningslogica.md  samenwerken_met_pipeline_tutorial.md
output/: consumption_profile.csv
output/pypsa_results/: buses-marginal_price.csv  buses-p.csv  buses.csv  carriers.csv  generators-marginal_cost.csv  generators-p.csv  generators.csv  loads-p.csv  network.csv  snapshots.csv  storage_units-p.csv  storage_units-p_dispatch.csv  storage_units-p_store.csv  storage_units-state_of_charge.csv  storage_units.csv  sub_networks.csv
output/smulders/: consumption_profile.csv  consumption_profile_hourly.csv  consumption_profile_monthly.csv  pv_generation_profile.csv  pv_generation_profile_hourly.csv  pv_generation_profile_monthly.csv
output/smulders-single/: pv_generation_profile.csv  pv_generation_profile_hourly.csv
src/: db.sqlite3
src/energy_pipeline/: __init__.py  normalizer.py  schema.py
src/energy_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/energy_web/: __init__.py  apps.py  settings.py  urls.py  wsgi.py
src/projects_ui/: apps.py  urls.py  views.py  visualization_data.py
src/qlikview/: calculator.qvs
tests/: __init__.py  test_belgian_dso.py  test_historiek_dagtotalen.py  test_registry.py  test_schema.py
(+91 files in other folders)
