[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "energy-pipeline"
version = "0.1.0"
description = "Electricity consumption to PyPSA battery optimization pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Django>=4.2,<5.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "pypsa>=0.26.0",
    "pyyaml>=6.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "pytest>=7.0.0",
]

[project.scripts]
run-pipeline = "energy_pipeline.scripts.run_pipeline:main"
run-pypsa = "energy_pipeline.scripts.run_pypsa:main"
run-ea-sim = "energy_pipeline.scripts.run_ea_sim:main"
visualize = "energy_pipeline.scripts.visualize:main"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
